# resources

ELS-AN00_02_HM_opensource/: Makefile  README_Kernel.txt  README_Version.txt
ELS-AN00_02_HM_opensource/Documentation/networking/: ip-sysctl.txt
ELS-AN00_02_HM_opensource/arch/arm64/: Kconfig  Makefile
ELS-AN00_02_HM_opensource/block/: Kconfig  Makefile  bio.c  blk-cgroup.c  blk-core.c  blk-exec.c  blk-flush.c  blk-merge.c  blk-mq-debugfs.c  blk-mq-sysfs.c  blk-mq-tag.c  blk-mq-tag.h  blk-mq.c  blk-mq.h  blk-softirq.c  blk-sysfs.c  blk-tag.c  blk-throttle.c  blk-wbt.c  blk-wbt.h  blk.h  blk_scsi_kern.c  dsm_block.c  dsm_block.h  elevator.c  fsck_boost.c  ioctl.c  mas_bkops_core.S  mas_bkops_core.h  mas_bkops_sysfs.S  mas_blk.h  mas_blk_busy_idle_interface.h  mas_blk_busy_idle_notify.S  mas_blk_core.S  mas_blk_dump.S  mas_blk_flush.S  mas_blk_flush_interface.c  mas_blk_flush_interface.h  mas_blk_ft.h  mas_blk_hyperhold.c  (+19 more)
ELS-AN00_02_HM_opensource/block/partitions/: Kconfig
ELS-AN00_02_HM_opensource/crypto/: Kconfig  Makefile  algboss.c
ELS-AN00_02_HM_opensource/drivers/: Kconfig  Makefile
ELS-AN00_02_HM_opensource/drivers/base/: cpu.c  (+2 more)
ELS-AN00_02_HM_opensource/drivers/video/fbdev/dkmd/dpu/cetus/res_mgr/: CMakeLists.txt  Makefile  dvfs.c  dvfs.h  opr_mgr.c  opr_mgr.h  res_mgr.c  res_mgr.h
ELS-AN00_02_HM_opensource/firmware/: mali_csffw.wa
ELS-AN00_02_HM_opensource/fs/: Kconfig  Makefile  binfmt_elf.c  block_dev.c  buffer.c  direct-io.c  exec.c  fs-writeback.c  inode.c  libfs.c  namei.c  namespace.c  super.c  sync.c  xattr.c
ELS-AN00_02_HM_opensource/init/: Kconfig  main.c
ELS-AN00_02_HM_opensource/kernel/: Makefile  audit.c  cfi.c  cpu.c  cred.c  exit.c  fork.c  futex.c  huawei_check_mmap_sem.c  huawei_hung_task.c  huawei_init_watchdog.c  kprobes.c  kthread.c  module.c  panic.c  reboot.c  seccomp.c  signal.c  smp.c  softirq.c  sysctl.c  sysctl_binary.c  watchdog.c  workqueue.c
ELS-AN00_02_HM_opensource/lib/: Kconfig  Kconfig.debug  Makefile
ELS-AN00_02_HM_opensource/mm/: Kconfig  Kconfig.debug  Makefile  backing-dev.c  cma.c  cma.h  compaction.c  debug.c  filemap.c  internal.h  kzerod.c  memcontrol.c  memory.c  memory_hotplug.c  migrate.c  mmap.c  mmu_notifier.c  mremap.c  oom_kill.c  page-writeback.c  page_alloc.c  page_io.c  pagecache_manage.S  pagecache_manage_interface.c  pagecache_manage_interface.h  percpu.c  readahead.c  shmem.c  slab.c  slab_common.c  slob.c  slub.c  swap.c  swap_state.c  swapfile.c  unmovable_isolate.c  usercopy.c  vmalloc.c  vmscan.c  vmstat.c  (+2 more)
ELS-AN00_02_HM_opensource/net/: Kconfig  Makefile  compat.c  socket.c
ELS-AN00_02_HM_opensource/scripts/: Makefile  link-vmlinux.sh
ELS-AN00_02_HM_opensource/security/: Kconfig  Makefile  commoncap.c
ELS-AN00_02_HM_opensource/tools/: dtbTool  pack_kernerimage_cmd.sh
(+7112 files in other folders)
